Texto não existem cursos

--- a/eventex/core/templates/core/talk_list.html
+++ b/eventex/core/templates/core/talk_list.html
@@ -21,6 +21,8 @@
             <h2>Mini-cursos</h2>
                 {% for course in courses %}
                 {% include 'core/talk_list_snippet.html' with talk=course only %}
+            {% empty %}
+                <p>Ainda não existem mini-cursos.</p>
             {% endfor %}
         </div>
     </section>
